round 1/Anonymous/error-output.txt
submissions/Anonymous/problemtest.c: In function 'int main()':
submissions/Anonymous/problemtest.c:22:4: error: 'else' without a previous 'if'
    else if
    ^~~~
submissions/Anonymous/problemtest.c:23:4: error: expected '(' before '{' token
    {
    ^
